<resources>
    <string name="app_name">Calculator</string>
    <string name="oow">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nign">9</string>
    <string name="dot">.</string>
    <string name="clear">C</string>

    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="divid">/</string>
    <string name="equal">=</string>
    <string name="aver">%</string>
</resources>
